--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>DogeInu Punks</title>
+    <title>DogeInuPunks Minter</title>
     <meta name="description" content="Mint your DogeInu Punk NFT" />
   </head>
   <body>
